# level1_imageclassification-cv-06

./: .gitignore  .gitmessage.txt  README.md  auto_trainer.py  auto_trainer.sh  base_config.json  ensamble_inference.py  inference.py  poetry.toml  pull_request_template.md  pyproject.toml  tmp.py  train.py
code_book/: age_class_EDA.ipynb  age_class_lelabel.py  background_img_check.py  background_sub.py  bg_sub_eval.py  compare_csv.py  data_label_gen.py  dataset_benchmark.py  new_train_data.csv  re_labeled_data.csv  train_label_gen.py  train_path_label.csv  transfrom_test_img.py
datasets/: base_dataset.py  my_dataset.py
losses/: base_loss.py  multi_task_loss.py
model/: base_model.py  my_model.py
trainer/: base_trainer.py  trainer.py
utils/: cosine_annealing_with_warmup.py  util.py
